# Coordimeet

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  DockerfileCelery  DockerfileProd  manage.py  prod_entrypoint.sh  requirements.txt
backend/apps/events/: models.py  serializers.py  services.py  urls.py  views.py
backend/apps/events/migrations/: 0001_initial.py  0002_alter_event_description.py  0003_event_selected_end_date_event_selected_start_date.py  0004_alter_event_organiser_group.py  0005_remove_eventnotification_notification_text_and_more.py  0006_delete_eventnotification.py  0007_eventnotification_task_id_and_more.py  0008_remove_eventparticipant_availability_level_and_more.py  0009_remove_eventparticipant_end_date_and_more.py  0010_alter_event_event_type.py  0011_remove_event_organiser_group_and_more.py  0012_alter_eventnotification_notification_type.py
backend/apps/notifications/: services.py  tasks.py  urls.py  views.py
backend/apps/users/: admin.py  forms.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_member.py  0003_coordimeetgroup_alter_member_role_alter_member_group.py  0004_coordimeetgroup_group_uuid.py  0005_rename_group_uuid_coordimeetgroup_uuid_and_more.py  0006_remove_coordimeetgroup_group_and_more.py  0007_coordimeetgroup_group.py  0008_coordimeetuser_user_type.py  0009_coordimeetgroup_is_closed.py
backend/apps/utils/: permissions.py
backend/coordimeet/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/coordimeet/events/: models.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/coordimeet/events/migrations/: 0001_initial.py  0002_event_email_thread_message_ids_and_more.py
backend/coordimeet/friends/: models.py  urls.py  views.py
backend/coordimeet/friends/migrations/: 0001_initial.py
backend/coordimeet/notifications/: models.py  services.py  urls.py  views.py
backend/coordimeet/notifications/migrations/: 0001_initial.py
backend/coordimeet/notifications/templates/: email.html
backend/coordimeet/users/: admin.py  decorators.py  forms.py  models.py  serializers.py  services.py  urls.py  views.py
backend/coordimeet/users/migrations/: 0001_initial.py  0002_rename_anonymous_email_coordimeetuser_anonymous_username.py
backend/example_app/: celery.py  settings.py  urls.py  wsgi.py
backend/example_app/coordimeet/: admin.py
backend/friends/: models.py  serializers.py  urls.py  views.py
backend/friends/migrations/: 0001_initial.py
docs/: development.md  production.md  setup.md
frontend/: .env.example  .env.example-app  .env.example-backend  Dockerfile  DockerfileProd  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: main.ts  sw.ts  vite-env.d.ts
frontend/src/common/: App.vue  globals.ts  helpers.ts  interfaces.ts  router.ts
frontend/src/common/stores/: UserStore.ts
frontend/src/components/: AppHeader.vue  Calendar.vue  Calendar2.vue  CalendarTime.vue  EventData.vue  EventListComponent.vue  Footer.vue  Header.vue  LoginButton.vue  OfflineComponent.vue  Popup.vue  PushNotificationsTest.vue  TabController.vue  UserComponent.vue
frontend/src/components/ui/: CustomButton.vue  CustomIcon.vue  CustomInput.vue  CustomRadio.vue  CustomSelect.vue  CustomToggle.vue  HelpIcon.vue  InputElement.vue  Message.vue  NotificationToggle.vue
frontend/src/pages/: App.vue  Event.vue  EventAttend.vue  EventCreate.vue  EventCreatePage.vue  EventList.vue  EventListpage.vue  EventPage.vue  ExamplePage.vue  GroupCreate.vue  GroupList.vue  Home.vue  HomePage.vue  Login.vue
frontend/src/pages/wrappers/: LoggedInWrapper.vue
frontend/src/stores/: UserStore.ts  storeMessages.ts  storeOnline.ts  storeUser.ts
frontend/src/styles/: colors.scss  global.scss  index.css  ui.css
frontend/src/types/: calendar.ts  event.ts  message.ts  tabs.ts  ui.ts  user.ts
frontend/src/utils/: ApiService.ts  NotificationService.ts  cookies.ts  dates.ts  router.ts  tabs.ts  theme.ts  tokens.ts
