[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coordimeet"
dynamic = ["version"]
description = "Web application for coordinating events"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Marko Vrečer" }
]
license = { text = "MIT" }
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "Django>=4.2,<4.3",
    "djangorestframework>=3.16,<4.0",
    "django-cors-headers>=4.9,<5.0",
    "python-dotenv>=1.2,<2.0",
    "redis>=7.1,<8.0",
    "celery>=5.6,<6.0",
    "wonderwords>=3.0,<4.0",
    "icalendar>=6.3,<7.0",
    "django-simple-notifications @ git+https://github.com/Yxmaxy/django-simple-notifications.git@v2.0.0",
]

[project.urls]
Homepage = "https://github.com/Yxmaxy/Coordimeet"
Repository = "https://github.com/Yxmaxy/Coordimeet.git"

[tool.setuptools]
packages = [
    "coordimeet",
    "coordimeet.users",
    "coordimeet.events",
    "coordimeet.notifications",
    "coordimeet.friends",
]
include-package-data = true

[tool.setuptools.package-dir]
coordimeet = "backend/coordimeet"

[tool.setuptools.package-data]
"coordimeet.users" = ["migrations/*.py"]
"coordimeet.events" = ["migrations/*.py"]
"coordimeet.notifications" = ["migrations/*.py", "templates/*.html"]
"coordimeet.friends" = ["migrations/*.py"]

[tool.setuptools.dynamic]
version = {file = "version.txt"}

[tool.uv]
exclude-newer = "2026-04-26T00:00:00Z"
